fixed some things of the dark mode

--- a/Pages/Dark mode/darktheme.css
+++ b/Pages/Dark mode/darktheme.css
@@ -22,14 +22,6 @@
   background-image: none;
 }
 
-.dark-mode .main {
-  background-image: none;
-  background-color: #0f203d;
-}
-
-.dark-mode .box-1 p {
-  color: white;
-}
 
 /* Toggle button positioning */
 .theme-toggle {
